styles/main.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background: rgb(248, 249, 250);
}

.container {
    display: flex;
    flex-direction: column;

    width: 100vw;
    height: 100vh;

    align-items: center;
    justify-content: center;
}

.clock {
    position: relative;

    display: flex;

    align-items: center;
    justify-content: space-around;
}

.dial {
    background: rgb(255, 255, 255);
    box-shadow: 0 0 20px 10px rgba(35, 35, 40, .24);
}

.dial,
.hour-hand,
.minute-hand {
    height: 16rem;

    border-radius: 50%;
}

.hour-hand,
.minute-hand {
    position: absolute;
}

.dial img,
.hour-hand img,
.minute-hand img {
    height: 100%;
}

.set-an-alarm {
    font: 300 1.25rem 'Source Sans Pro', sans-serif;

    display: flex;

    width: 10rem;
    height: 3.5rem;
    margin-top: 4.5rem;

    transition: 400ms;
    text-decoration: none;

    color: rgb(255, 255, 255);
    border-radius: 4px;
    background: rgb(10, 175, 245);
    box-shadow: 0 4px 24px rgba(35, 35, 40, .16);

    align-items: center;
    justify-content: center;
}

.set-an-alarm:hover {
    background: rgb(15, 160, 220);
}

@media (min-width: 360px) {
    .dial {
        background: rgb(255, 255, 255);
        box-shadow: 0 0 24px 12px rgba(35, 35, 40, .24);
    }

    .dial,
    .hour-hand,
    .minute-hand {
        height: 18rem;

        border-radius: 50%;
    }
}

@media (min-width: 500px) {
    .clock {
        position: relative;

        display: flex;

        padding-top: 4.5rem;

        align-items: center;
        justify-content: space-around;
    }

    .dial {
        background: rgb(255, 255, 255);
        box-shadow: 0 0 32px 16px rgba(35, 35, 40, .24);
    }

    .dial,
    .hour-hand,
    .minute-hand {
        height: 24.25rem;

        border-radius: 50%;
    }
}

